--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,9 @@ permissions:
 
 env:
     # Name of module and id separated by a slash
-    INSTANCE: Writerside/hi
+    INSTANCE: Writerside/docs
     # Replace HI with the ID of the instance in capital letters
-    ARTIFACT: webHelpHI2-all.zip
+    ARTIFACT: webHelpDOCS2-all.zip
     # Writerside docker image version
     DOCKER_VERSION: 232.10275
 # Add the variable below to upload Algolia indexes
