--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ env:
     DOCKER_VERSION: 232.10275
 # Add the variable below to upload Algolia indexes
 # Replace HI with the ID of the instance in capital letters
-    ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
+    ALGOLIA_ARTIFACT: algolia-indexes-DOCS.zip
 
 jobs:
     build:
