update GITHUB_TOKEN permissions for private repos

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ on:
 permissions:
     id-token: write
     pages: write
+    contents: read
 
 env:
     # Name of module and id separated by a slash
