--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ permissions:
 env:
     # Name of module and id separated by a slash
     INSTANCE: Writerside/docs
-    # Replace HI with the ID of the instance in capital letters
+    # Artifact name webHelp{ID}2-all.zip where ID is the id of the instance in CAPITAL LETTERS
+    # Do NOT remove the `2`
     ARTIFACT: webHelpDOCS2-all.zip
     # Writerside docker image version
     DOCKER_VERSION: 232.10275
