--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,19 @@ env:
     ARTIFACT: webHelpDOCS2-all.zip
     # Writerside docker image version
     DOCKER_VERSION: 232.10275
-# Add the variable below to upload Algolia indexes
-# Replace HI with the ID of the instance in capital letters
+    # Add the variable below to upload Algolia indexes
+    # Replace HI with the ID of the instance in capital letters
     ALGOLIA_ARTIFACT: algolia-indexes-DOCS.zip
+    ALGOLIA_APP_NAME: EIQLZJYNQ3
+    ALGOLIA_INDEX_NAME: mz-docs-index
+    ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
+    # The 2 variables below SHOULD BE SINGLE-QUOTED
+    # and should MATCH exactly with
+    # the CAPITALIZED Writerside Instance ID and Version mentioned in writerside.cfg file
+    # ex.
+    # From writerside.cfg file: <instance src="docs.tree" version="1.0"/>
+    CONFIG_JSON_PRODUCT: 'DOCS'
+    CONFIG_JSON_VERSION: '1.0'
 
 jobs:
     build:
@@ -103,3 +113,25 @@ jobs:
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v1
+
+    publish-indexes:
+      needs: [ build, test, deploy ]
+      runs-on: ubuntu-latest
+      container:
+        image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-2
+      steps:
+        - name: Download artifact
+          uses: actions/download-artifact@v3
+          with:
+            name: docs
+        - name: Unzip artifact
+          run: |
+            unzip -O UTF-8 -qq '${{ env.ALGOLIA_ARTIFACT }}' -d algolia-indexes
+            env algolia-key='${{env.ALGOLIA_KEY}}' java -jar /opt/builder/help-publication-agent.jar \
+            update-index \
+            --application-name '${{env.ALGOLIA_APP_NAME}}' \
+            --index-name '${{env.ALGOLIA_INDEX_NAME}}' \
+            --product '${{env.CONFIG_JSON_PRODUCT}}' \
+            --version '${{env.CONFIG_JSON_VERSION}}' \
+            --index-directory algolia-indexes/ \
+            2>&1 | tee algolia-update-index-log.txt
