--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ env:
     # ex.
     # From writerside.cfg file: <instance src="docs.tree" version="1.0"/>
     CONFIG_JSON_PRODUCT: 'DOCS'
-    CONFIG_JSON_VERSION: '1.0'
+    CONFIG_JSON_VERSION: ''
 
 jobs:
     build:
