--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,7 @@ jobs:
             path: |
                 artifacts/${{ env.ARTIFACT }}
                 artifacts/report.json
+                artifacts/${{ env.ALGOLIA_ARTIFACT }}
             retention-days: 7
 
 # Add the step below to upload Algolia indexes
