--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ env:
     # Name of module and id separated by a slash
     INSTANCE: Writerside/docs
     # Artifact name webHelp{ID}2-all.zip where ID is the id of the instance in CAPITAL LETTERS
-    # Do NOT remove the `2`
+    # Don't remove the `2`
     ARTIFACT: webHelpDOCS2-all.zip
     # Writerside docker image version
     DOCKER_VERSION: 241.15989
