--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ env:
     # Replace HI with the ID of the instance in capital letters
     ALGOLIA_ARTIFACT: algolia-indexes-DOCS.zip
     ALGOLIA_APP_NAME: 1XDKRQ1INV
-    ALGOLIA_INDEX_NAME: mz-docs-index
+    ALGOLIA_INDEX_NAME: my_docs_index
     ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
     # The 2 variables below SHOULD BE SINGLE-QUOTED
     # and should MATCH exactly with
